Bug fix on overflow issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,6 @@ code {
     monospace;
 }
 
-/* * {
+* {
   overflow: hidden;
-} */
+}
